--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
 </head>
@@ -67,31 +67,47 @@
                 <div class="card-container">
                     <div class="card">
                         <div class="play">
-                            <svg xmlns="http://www.w3.org/2000/svg" 
-       viewBox="0 0 24 24" 
-       width="40" height="40" 
-       fill="#000">
-    <path d="M18.8906 12.846C18.5371 14.189 16.8667 15.138 13.5257 17.0361C10.296 18.8709 8.6812 19.7884 7.37983 19.4196C6.8418 19.2671 6.35159 18.9776 5.95624 18.5787C5 17.6139 5 15.7426 5 12C5 8.2574 5 6.3861 5.95624 5.42132C6.35159 5.02245 6.8418 4.73288 7.37983 4.58042C8.6812 4.21165 10.296 5.12907 13.5257 6.96393C16.8667 8.86197 18.5371 9.811 18.8906 11.154C19.0365 11.7084 19.0365 12.2916 18.8906 12.846Z" 
-          stroke="black" 
-          stroke-width="1.5" 
-          stroke-linejoin="round" />
-  </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40"
+                                fill="#000">
+                                <path
+                                    d="M18.8906 12.846C18.5371 14.189 16.8667 15.138 13.5257 17.0361C10.296 18.8709 8.6812 19.7884 7.37983 19.4196C6.8418 19.2671 6.35159 18.9776 5.95624 18.5787C5 17.6139 5 15.7426 5 12C5 8.2574 5 6.3861 5.95624 5.42132C6.35159 5.02245 6.8418 4.73288 7.37983 4.58042C8.6812 4.21165 10.296 5.12907 13.5257 6.96393C16.8667 8.86197 18.5371 9.811 18.8906 11.154C19.0365 11.7084 19.0365 12.2916 18.8906 12.846Z"
+                                    stroke="black" stroke-width="1.5" stroke-linejoin="round" />
+                            </svg>
                         </div>
-                    <img src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="">
-                    <h2>Happy Hits</h2>
-                    <p>Hits to boost your moods and fill you with happiness</p>
-                </div>
+                        <img src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your moods and fill you with happiness</p>
+                    </div>
 
-                <div class="card">
-                    <img src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="">
-                    <h2>Happy Hits</h2>
-                    <p>Hits to boost your moods and fill you with happiness</p>
-                </div>
 
+                    <div class="card">
+                        <div class="play">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40"
+                                fill="#000">
+                                <path
+                                    d="M18.8906 12.846C18.5371 14.189 16.8667 15.138 13.5257 17.0361C10.296 18.8709 8.6812 19.7884 7.37983 19.4196C6.8418 19.2671 6.35159 18.9776 5.95624 18.5787C5 17.6139 5 15.7426 5 12C5 8.2574 5 6.3861 5.95624 5.42132C6.35159 5.02245 6.8418 4.73288 7.37983 4.58042C8.6812 4.21165 10.296 5.12907 13.5257 6.96393C16.8667 8.86197 18.5371 9.811 18.8906 11.154C19.0365 11.7084 19.0365 12.2916 18.8906 12.846Z"
+                                    stroke="black" stroke-width="1.5" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        <img src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your moods and fill you with happiness</p>
+                    </div>
+
+                </div>
+                <div class="playbar">
+                    <div class="songinfo"></div>
+                   <div class="songbuttons">
+                    <img src="previous.svg" alt="">
+                  <img src="play.svg" alt="">
+                    <img src="next.svg" alt="">
+                   </div>
+                   <div class="songtime"></div>
+                </div>
             </div>
         </div>
     </div>
-    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
