--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
                 </div>
                 <div class="songlist">
                     <ul>
-                        
+                        <li><img class="invert" src="music.svg" alt="">
+                            <div class="songinfo">
+                                <div>Song Name</div>
+                                <div>Artist Name</div>
+                            </div>
+                            <div class="playnow">
+                                <span>Play Now</span>
+                                <img class="invert" src="play.svg" alt="">
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer">
