--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 
                 </div>
                 <div class="playbar">
+                    <div class="seekbar">
+                        <div class="circle">
+                            
+                        </div>
+                    </div>
                     <div class="songinfo"></div>
                    <div class="songbuttons">
                     <img src="previous.svg" alt="">
