Added Sign Up page and updated buttons in index.html

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
                         </svg>
                     </div>
                     <div class="buttons">
-                        <button class="signupbtn">Sign up</button>
-                        <button class="loginbtn">Login</button>
+                         <button class="signupbtn" onclick="window.location.href='signup.html'">Sign Up</button>
+                         <button class="loginbtn">Login</button>
                     </div>
+
                 </div>
             </div>
             <div class="spotify-playlists">
