--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="buttons">
                          <button class="signupbtn" onclick="window.location.href='signup.html'">Sign Up</button>
-                         <button class="loginbtn">Login</button>
+                         <button class="loginbtn" onclick="window.location.href='login.html'">Login</button>
                     </div>
 
                 </div>
